# ray-tracing-gl

./: .gitignore  CMakeLists.txt  README.md
Shaders/: geometry-prepare.frag  geometry-prepare.geom  geometry-prepare.vert  ray-tracing.frag  ray-tracing.vert
Sources/DemoApp/: CMakeLists.txt  Camera.cpp  Camera.h  Controls.cpp  Controls.h  Main.cpp  Math.hpp  RtglTools.cpp  RtglTools.h  Timer.cpp  Timer.h  Tools.cpp  Tools.h  WinTools.cpp  WinTools.h
Sources/Renderer/: CMakeLists.txt  FrameBuffer.cpp  GeometryBuffer.cpp  GeometryBuffer.h  Globals.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  Types.h
Sources/Renderer/Interface/: GeometryBufferInterface.cpp  GeometryBufferInterface.h  LightSourceInterface.cpp  LightSourceInterface.h  MeshInterface.cpp  MeshInterface.h  SceneElementInterface.cpp  SceneElementInterface.h
Sources/Renderer/Resources/: FrameBuffer.h  GeometryBuffer.cpp  GeometryBuffer.h  ShaderProgram.cpp  ShaderProgram.h
Sources/Renderer/Scene/: Camera.cpp  Camera.h  LightSource.cpp  LightSource.h  Mesh.cpp  Mesh.h  SceneElement.cpp  SceneElement.h
